[package]
name = "vhrdcan"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.6"
hash32 = "0.1"
hash32-derive = "0.1"

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false
optional = true

[features]
serialization = ["serde"]