[package]
name = "vhrdcan"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"
description = "Types for working with CAN Bus, including proper priority ordering, message pool, serialization and hash support."
repository = "https://github.com/vhrdtech/vhrdcan"
readme = "README.md"
license = "MIT"

[dependencies]
hash32 = "0.2"
hash32-derive = "0.1"

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false
optional = true

[features]
serialization = ["serde"]